# AzureMadWorld

./: README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  package-lock.json
.github/workflows/: DotnetCheck.yml  azure-static-web-apps-mango-bay-0e9563303.yml  codeql-analysis.yml  main_madworld-api.yml  rust.yml
MadWorld/: MadWorld.sln
MadWorld/MadWorld.API/: GlobalUsings.cs  MadWorld.API.csproj  Program.cs  Startup.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json  liblearn_lib.dylib
MadWorld/MadWorld.Business/: Class1.cs  GlobalUsings.cs  MadWorld.Business.csproj
MadWorld/MadWorld.Console/: ApplicationInsightAPI.cs  MadWorld.Console.csproj  Program.cs  Tester.cs
MadWorld/MadWorld.DataLayer/: Class1.cs  DataResult.cs  GlobalUsings.cs  MadWorld.DataLayer.csproj
MadWorld/MadWorld.Mobile/: MadWorld.Mobile.sln
MadWorld/MadWorld.Shared.Client/: Class1.cs  MadWorld.Shared.Client.csproj
MadWorld/MadWorld.Shared.Common/: Class1.cs  MadWorld.Shared.Common.csproj
Nuget/: MadWorld.Shared.Client.1.0.1.nupkg  MadWorld.Shared.Client.1.0.2.nupkg  MadWorld.Shared.Client.1.0.3.nupkg  MadWorld.Shared.Client.1.0.4.nupkg  MadWorld.Shared.Common.1.0.3.nupkg  MadWorld.Shared.Common.1.0.4.nupkg
Rust/learn_lib/: Cargo.toml
Rust/learn_lib/src/: lib.rs
Rust/learn_lib/src/helper/: mod.rs
Rust/learn_lib/testtest/: .rustc_info.json
Scripts/: compile-js.sh  install.sh  update.sh
__blobstorage__/: 4af8d554-8600-4005-b936-bdacff2b785f
(+321 files in other folders)
