[package]
name = "learn_lib"
version = "0.1.0"
edition = "2018"

[build]
build-stage = 1
#target = ["aarch64-apple-darwin"]
target = ["x86_64-unknown-linux-gnu"]


[lib]
name="learn_lib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
